--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "client": "npm run dev --prefix frontend",
+    "server": "nodemon backend/server.js",
+    "dev": "concurrently \"npm run server arg\" \" npm run client\" "
   },
   "author": "ZAWAD BIN SHARIF",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
