--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node backend/server.js",
     "client": "npm run dev --prefix frontend",
     "server": "nodemon backend/server.js",
-    "dev": "concurrently \"npm run server arg\" \" npm run client\" "
+    "dev": "concurrently \"npm run server\" \" npm run client\" "
   },
   "author": "ZAWAD BIN SHARIF",
   "license": "ISC",
