--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
