--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.10.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
+    "react-use": "^17.4.0",
     "sass": "^1.64.1"
   },
   "devDependencies": {
