--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -17,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "sass": "^1.64.1"
   },
