--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "npm run dev --prefix frontend",
     "server": "nodemon backend/server.js",
     "dev": "concurrently \"npm run server\" \" npm run client\" ",
+    "production": "concurrently \"npm run start\" \" npm run client\" ",
     "packages": "concurrently \"npm install\" \" npm install --prefix frontend\" "
   },
   "author": "ZAWAD BIN SHARIF",
