--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "ZAWAD BIN SHARIF",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
@@ -24,8 +23,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
-    "react-redux": "^8.1.2"
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
