--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 VITE_API_URL=https://inventory-web-software-built-using-mern.onrender.com
+VITE_DEFAULT_BASE_URL=http://localhost:3000/api
+# VITE_API_URL=http://localhost:4000/api
