--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
 DATABASE_URI=mongodb://127.0.0.1:27017/inventory
 # DATABASE_URI=mongodb+srv://zawad:zawad2000@cluster0.0lfmuez.mongodb.net/
+ALLOW_CROSS_ORIGIN=http://localhost:3000/*
